# SIUE

./: .dockerignore  .gitignore  DOCKER.md  README.md  docker-compose.yml
back-end/: Dockerfile  calendar_sync.py  database.py  embeddings.py  event_generator.py  google_auth.py  main.py  models.py  places.py  pyproject.toml  server.py  test_events.py  vapi.py  vibe_parser.py
back-end/tests/: test_calendar.py
backend/: Dockerfile  main.py
diagrams/: architecture.md  database_schema.md  user_flow.md
front-end/: Dockerfile  SITE_PLAN.md  SUPABASE_SETUP.md  index.html  package-lock.json  package.json  road_map.md  temp.txt  vite.config.ts
front-end/.cursor/plans/: events_voting_overhaul_9c16b862.plan.md
front-end/PLANS/: SETUP_FLOW.md  schemas.json
front-end/src/: App.tsx  index.css
front-end/src/components/: RileyCallButton.tsx  index.ts
front-end/src/contexts/: AuthContext.tsx  OnboardingContext.tsx
front-end/src/data/: mockData.ts
front-end/src/hooks/: useCalendarStatus.ts  useGroupData.ts  useUserProfile.ts
front-end/src/lib/: supabase.ts  types.ts  userProfile.ts
front-end/src/pages/: HomePage.tsx  LandingPage.tsx  LoginPage.tsx  Onboarding.module.css  OnboardingPage.tsx  PreferencesPage.tsx  SignupPage.tsx  WaitingRoom.module.css  WaitingRoomPage.tsx
front-end/src/utils/: functions.ts
front-end/supabase/migrations/: 001_create_users_and_trigger.sql  001_users_rls_insert.sql  002_create_calendar_tokens.sql  007_match_users_rpc.sql  (+7 more)
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx
tests/: seed_users.py
(+67 files in other folders)
